At #473 Add Network device org api
